--- a/recette.html
+++ b/recette.html
@@ -23,7 +23,7 @@
             </div>
             
             <div class="info">
-                <img class="centre info" style="display: block;" src="https://img-3.journaldesfemmes.fr/xNHzCsgpfQo_8J-OdpsaAkBGltA=/748x499/smart/3fab692feaaf4aeda820708bbb11ada6/recipe-jdf/10018954.jpg">
+                <img class="centre info" style="display: block;" src="gateau.jpg">
 
                 <table class="info">
                     <tr>
