--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Recette du gateau au chocolat</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="recette.css">
+        <title>Gateau au chocolat</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <link rel="stylesheet" href="recette.css"/>
     </head>
-
     <body>
-        <!-- COMMENTAIRE HTML -->
+        <div class="contenu">
 
-        <div class="contenu">            
             <div class="centre categorie">
-                <p class="categorie">Recette</p> 
+                <p class="categorie">Recette</p>
             </div>
 
-            <h1>Recette du gateau au chocolat</h1>
+            <h1>Gateau au chocolat</h1>
 
             <div class="separateur"></div>
 
-            <div class=centre>
-                <p class="description">"Cette recette facile du gateau au chocolat est un grand classique qui fera plaisir à vos enfants."</p>   
+            <!-- Mon commentaire HTML -->
+            <div class="centre">
+                <p class="description">"Cette recette facile du gateau au chocolat est un grand classique qui fera plaisir à vos enfants."</p>
             </div>
-            
+
             <div class="info">
-                <img class="centre info" style="display: block;" src="gateau.jpg">
+                <img class="centre info" src="https://jonathanroux.com/gateau.jpg?id=9998">
 
                 <table class="info">
                     <tr>
@@ -41,15 +41,14 @@
                 </table>
             </div>
 
-
             <div>
                 <div class="colonne1 colonne">
                     <h2>Ingrédients</h2>
                     <div class="ingredients">
-                        <p class="ingredients">Chocolat noir: 200g</p>
-                        <p class="ingredients">Beurre: 200g</p>
-                        <p class="ingredients">Sucre: 150g</p>
-                        <p class="ingredients">Farine: 80g</p>
+                        <p>Chocolat noir: 200g</p>
+                        <p>Beurre: 200g</p>
+                        <p>Sucre: 150g</p>
+                        <p>Farine: 80g</p>
                     </div>
                 </div>
 
@@ -64,5 +63,5 @@
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </body>     
+</html>        
